# memchan

./: ANNOUNCE  ANNOUNCE.MAIL  BUILDINFO  ChangeLog  ChangeLog.short  DEPENDS  DESCRIPTION  INSTALL  LSM  Makefile.in  PREPARE  README  README.install  configure  configure.in  makefile.vc  manual  memchan.c  pkgIndex.in  pkgIndex.tcl  teapot.txt  test.setup
doc/: INSTALL  fifo.man  fifo2.man  manpages.man  manual  memchan.man  null.man  random.man  zero.man
doc/nodes/: a_up.def  ack.node  cmds.node  compile.node  home.node  mac.node  markup.def  people.def  required.def  shortcut.def  tea.node  unix.node  urls.def  where.node  win.node
generic/: buf.c  buf.decls  buf.h  bufDecls.h  bufExt.c  bufFix.c  bufIntDecls.h  bufQueue.c  bufRange.c  bufStubLib.c  chantest.c  counter.c  fifo.c  fifo2.c  init.c  memchan.c  memchan.decls  memchan.h  memchanInt.h  memchanStubLib.c  null.c  pkgIndex.tcl.in  random.c  zero.c
htdocs/raw/: animations.exp  changelog.exp  disclaimer.exp  documentation.exp  images.exp  index.exp
mac/: README
tclconfig/: tcl.m4
tea/: Makefile.in  configure.in  mkIndex.tcl.in  pkgIndex.tcl  tcl.m4  testshell
tea.tests/: fifo_bb.test  memchan_bb.test
tests/: all  defs  fifo.test  memchan.test  null.test  random.test  zero.test
tools/: changelog_to_list  htdocs_refresh  htdocs_setup  manpage_regen  watch_cvs
tools/rules/: configuration  formatting  manpage.api  manpage.api.spec  manpage.html  manpage.html.site  manpage.list  manpage.nroff  manpage.tmml  memchan  references  xmlrules.tcl
unix/: Makefile.in  README  configure  configure.in  pkgIndex.tcl.in
win/: Makefile.gnu  README  makefile.vc  makefile.vc5  mc.rc  nmakehlp.c  pkgIndex.tcl  rules.vc
